misaligned chat close button icon fix

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,9 +5,15 @@
 * {
   font-weight: 500;
 }
+
 body {
   background-color: #f8f9fa;
 }
+
+#sitegpt-chat-icon {
+  display: flex !important;
+}
+
 .login-step .sbui-btn-container {
   width: 100%;
 }
@@ -16,13 +22,18 @@ body {
   display: flex;
   align-items: center;
 }
+
 .sbui-select:focus-visible {
   border: 1px solid #f76808 !important  ;
-  box-shadow: 0px 0px 0px 2px #ffcca7, 0px 1px 2px rgba(0, 0, 0, 0.1) !important;
+  box-shadow:
+    0px 0px 0px 2px #ffcca7,
+    0px 1px 2px rgba(0, 0, 0, 0.1) !important;
 }
+
 .sbui-checkbox:hover {
   border-color: #f76808 !important;
 }
+
 input[type="search"]::-webkit-search-cancel-button {
   -webkit-appearance: none !important;
 }
